@@ -143,7 +143,9 @@ public:
     void setEventHandlerLineNumber(int lineNumber);
 
     void setProcessingTimerCallback(bool processingTimerCallback) { m_processingTimerCallback = processingTimerCallback; }
-    bool processingUserGesture() const;
+    // FIXME: Currently we don't use the parameter world at all.
+    // See http://trac.webkit.org/changeset/54182
+    bool processingUserGesture(DOMWrapperWorld* world = 0) const;
     bool anyPageIsProcessingUserGesture() const;
 
     void setPaused(bool paused) { m_paused = paused; }
