@@ -1,3 +1,14 @@
+2010-02-01  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        [Chromium] Unreviewed attempt to fix the chromium build.
+
+        Corresponding change: http://trac.webkit.org/changeset/54182
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+        * bindings/v8/ScriptController.cpp:
+        (WebCore::ScriptController::processingUserGesture):
+        * bindings/v8/ScriptController.h:
+
 2010-02-01  Dmitry Titov  <dimich@chromium.org>
 
         Reviewed by David Levin.
